--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,89 @@ html,body{
     height: 100%;
 }
 
-.background{
+.slider, .bx-viewport, .bx-wrapper{
+    width: 100%;
+    height: 100%;
+}
+
+.background_01{
     background:url("../images/a.jpg") no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
     height: 100%;
+}
+.background_02{
+    background:url("../images/b.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+.background_03{
+    background:url("../images/c.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+.overlay{
+    width: 100%;
+    height: 100%;
+    background:url("../images/16.png");
+    position: absolute;
+    top:0;
+    z-index:10;
+}
+
+.contents{
+    width:100%;
+    height:100%;
+    position: absolute;
+    text-align: center;
+    z-index:20;
+    top:50%;
+    font-family: "Malgun Gothic", sans-serif;
+    margin-top: -109px;
+}
+
+i{
+}
+
+.contents_name{
+    font-size:64px;
+    color:white;
+    font-weight: bold;
+    margin-bottom:25px;
+}
+
+.contents_job,a{
+    font-size:25px;
+    color:white;
+    font-weight: bold;
+    margin-bottom:50px;
+}
+
+.contents ul{
+    font-size:0;
+}
+
+.contents ul li{
+    display:inline-block;
+    width:52px;
+    height:52px;
+    line-height: 52px;
+    /*border:1px solid white;
+    border-radius: 50%;*/
+    font-size:16px;
+    color:white;
+    margin-right:20px;
+}
+
+.contents ul :last-child{
+    margin-right:0px;
+}
+
+.contents > ul > li > a{
+    color: inherit;
 }
